add all required jvm args